# pre-commit-test

./: .gitignore  .pre-commit-config.yaml  404.html  README.md  index.html  main.py  mkdocs.yml  pyproject.toml  sitemap.xml
.github/ISSUE_TEMPLATE/: bug.yaml  feature.yaml  hotfix.yaml
.github/workflows/: code-quality.yaml  docs-ci.yaml  enforce-branch-origin.yaml  restrict-merge.yaml
admonitions/: index.html
code-example/: index.html
content-tabs/: index.html
diagram-examples/: index.html
docs/: code-example.md  content-tabs.md  index.md
project-shared/: pyproject.toml
search/: search_index.json
tests/: pyproject.toml
tests/test_project_shared/helper/: test_util.py
