[project]
name = "pre-commit-test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "black>=25.1.0",
    "mkdocs-material>=9.6.7",
    "pre-commit>=4.1.0",
    "pylint>=3.3.4",
    "ruff>=0.9.10",
]


[tool.ruff]
lint.select = ["E", "F"]
lint.ignore = ["E402", "B905", "N818", "S101"]

# Allow autofix for all enabled rules (when `--fix`) is provided.
lint.fixable = [
    "W",
    "C90",
    "I",
    "N",
    "D",
    "YTT",
    "ASYNC",
    "S",
    "BLE",
    "FBT",
    "A",
    "B",
    "COM",
    "C4",
    "DTZ",
    "EM",
    "ISC",
    "ICN",
    "G",
    "INP",
    "PIE",
    "T20",
    "PYI",
    "PT",
    "Q",
    "RSE",
    "RET",
    "SLF",
    "SIM",
    "TID",
    "INT",
    "ARG",
    "PTH",
    "PGH",
    "PL",
    "E",
    "F",
    "PLR",
    "PLW",
    "TRY",
    "FLY",
]

lint.unfixable = []

# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]
lint.per-file-ignores = {}

# Same as Black.
line-length = 88

# Allow unused variables when underscore-prefixed.
lint.dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

target-version = "py311"

[tool.ruff.lint.mccabe]
# Unlike Flake8, default to a complexity level of 10.
max-complexity = 10