[project]
name = "project-shared"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Arash", email = "sina.v.dashti@gmail.com" }
]
requires-python = ">=3.11"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.setuptools.packages.find]
where = ["src"]